--- a/src/UserDetails/userDetailsTable.css
+++ b/src/UserDetails/userDetailsTable.css
@@ -8,9 +8,15 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.table-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
 .user-table-container h2 {
     color: #333;
-    text-align: center;
     margin-bottom: 20px;
     font-size: 24px;
 }
