--- a/src/Pagination/pagination.css
+++ b/src/Pagination/pagination.css
@@ -45,6 +45,7 @@
 .pagination-btn:hover:not(:disabled) {
   background-color: #f5f5f5;
   border-color: #999;
+  color: black;
 }
 
 .pagination-btn:disabled {
